--- a/app/views/static_pages/home.html.haml
+++ b/app/views/static_pages/home.html.haml
@@ -11,6 +11,7 @@
                 = s/10.to_f
       %textarea.target__textarea#target-text
       .target__fixed-text#fixed-text
+        I make lots of money. On weekdays, I recieve an average of 50 orders a day.
       .target__bottom
         %button#edit-btn.btn
           edit
@@ -21,6 +22,7 @@
     .recognized
       %h4 認識文
       .recognized__textarea#recognized-text
+        I make lot of money. On weekdays, I recieved an average of 50 orders a day.
       .recognized__bottom
         %button#rec-btn.btn
           rec
