Add btn action for setting text

--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -38,11 +38,12 @@
       font-size: 20px;
       height: 200;
       width: 840px;
+      border: 0;
       resize: none;
-      
-      display: none;
     }
     &__fixed-text {
+      border: 1px s lightgrey;
+      margin-bottom: 5px;
       background-color: lightgrey;
       padding: 10px 20px;
       height: 200px;
@@ -50,7 +51,7 @@
       font-size: 20px;
       height: 200;
       width: 840px;
-      // display: none;
+      display: none;
     }
     &__bottom {
       margin-top: 3px;
