--- a/app/views/static_pages/home.html.haml
+++ b/app/views/static_pages/home.html.haml
@@ -14,14 +14,16 @@
       .target__fixed-text#fixed-text
         I make lots of money. On weekdays, I recieve an average of 50 orders a day.
       .target__bottom
-        %button#edit-btn.btn
-          edit
-        %button#set-btn.btn
-          set
-        %button#speech-btn.btn
-          speech
-        %button#refresh-btn.btn
-          refresh
+        .target__bottom__left
+          %button#edit-btn.btn
+            edit
+          %button#set-btn.btn
+            set
+          %button#refresh-btn.btn
+            refresh
+        .target__bottom__right
+          %button#speech-btn.btn
+            speech
     .recognized
       %h4 認識文
       .recognized__textarea#recognized-text
