Install font-awesome

--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -40,6 +40,7 @@
       width: 840px;
       border: 0;
       resize: none;
+      display: none;
     }
     &__fixed-text {
       border: 1px s lightgrey;
@@ -51,7 +52,6 @@
       font-size: 20px;
       height: 200;
       width: 840px;
-      display: none;
     }
     &__bottom {
       margin-top: 3px;
@@ -90,6 +90,25 @@
     border-right: 2px solid red;
     
     &:active {
+        background-color: lightslategray;
+        border-bottom: 2px solid black;
+        border-right: 2px solid black;
+      }
+      &:focus {
+        outline: 0;
+      }
+  }
+
+  .icon {
+    background-color: white;
+    width: 35px;
+    height: 35px;
+    text-align: center;
+    line-height: 35px;
+    color: darkblue;
+    border-bottom: 2px solid red;
+    border-right: 2px solid red;
+      &:active {
         background-color: lightslategray;
         border-bottom: 2px solid black;
         border-right: 2px solid black;
