--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,6 +1,9 @@
 @import 'font-awesome-sprockets';
 @import 'font-awesome';
 
+@import 'common';
+@import 'reset';
+@import 'static_pages'
 /*
  * This is a manifest file that'll be compiled into application.css, which will include all the files
  * listed below.
