Add views and style

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -3,7 +3,8 @@
 
 @import 'common';
 @import 'reset';
-@import 'static_pages'
+@import 'static_pages';
+@import 'user_form';
 /*
  * This is a manifest file that'll be compiled into application.css, which will include all the files
  * listed below.
