--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -14,7 +14,7 @@
           %h1 Phonety
       .header__right
         - if user_signed_in?
-          = link_to "#", class: "header__right__link" do
+          = link_to current_user, class: "header__right__link" do
             = current_user.name
           = link_to destroy_user_session_path, class: "header__right__link user_name", method: :delete, data: { confirm: "ログアウトします" } do
             ログアウト
@@ -32,9 +32,9 @@
           %h2 Phonety
           %p Learn to Grow
           .footer__box__left__links
-            = link_to "#", class: "footer__box__left__links__link" do
+            = link_to "https://twitter.com/snskOgata", class: "footer__box__left__links__link", target: "_blank" do
               Twitter
-            = link_to "#", class: "footer__box__left__links__link" do
+            = link_to "https://qiita.com/snskOgata", class: "footer__box__left__links__link", target: "_blank" do
               Qiita
         .footer__box__right
           %h4 Phonety
