--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -9,7 +9,8 @@
           目標：
         %textarea.user__goal__content{disabled:'true'}
           TOEIC900点
-        = link_to "編集", "#", class: "user__goal__edit", id: "goal-edit-btn"
+        = link_to "編集", "#", class: "user__goal__btn", id: "goal-edit-btn"
+        = link_to "更新", "#", class: "user__goal__btn", id: "goal-update-btn"
           
   .right-container
     .right-container__upper
