Add :hover to btn

--- a/app/assets/stylesheets/users_show.scss
+++ b/app/assets/stylesheets/users_show.scss
@@ -46,10 +46,13 @@
           max-width: 50px;
           text-align: center;
           &:active {
-            background-color: lightslategray;
+            background-color: darkgrey;
           }
           &:focus {
             outline: 0;
+            background-color: lightslategray;
+          }
+          &:hover {
             background-color: lightslategray;
           }
         }
@@ -78,10 +81,13 @@
           }
 
           &:active {
-            background-color: lightslategray;
+            background-color: darkgrey;
           }
           &:focus {
             outline: 0;
+            background-color: lightslategray;
+          }
+          &:hover {
             background-color: lightslategray;
           }
         }
