Add view to lessons#new

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -6,6 +6,7 @@
 @import 'static_pages';
 @import 'user_form';
 @import 'users_show';
+@import 'lessons';
 /*
  * This is a manifest file that'll be compiled into application.css, which will include all the files
  * listed below.
