Show missed word to table

--- a/app/views/lessons/new.html.haml
+++ b/app/views/lessons/new.html.haml
@@ -52,7 +52,7 @@
     .lesson-container__right
       .words-container
         .words-container__top
-          %h1 誤認識単語
+          %h4 単語練習
         .words-container__mid
           %table.words-table
             %tbody#missed-words
@@ -68,4 +68,4 @@
           %i.fa.fa-microphone.fa-#rec-word-btn.icon.word-icon
           %i.fa.fa-pause.fa-#stop-word-btn.icon.word-icon
           %i.fa.fa-plus.fa-#add-word-btn.icon.word-icon
-= javascript_include_tag "home.js"
+= javascript_include_tag "lessons_new.js"
