--- a/app/assets/stylesheets/lessons.scss
+++ b/app/assets/stylesheets/lessons.scss
@@ -4,6 +4,9 @@
 }
 
 .lesson-container {
+  h4 {
+    color: darkblue;
+  }
   background-color: #f5f5f5;
   width: 1150px;
   margin: 20px auto;
@@ -18,7 +21,6 @@
         display: flex;
         justify-content: space-between;
         h4 {
-        color: darkblue;
         display: inline;
         }
         &__speed {
@@ -58,9 +60,6 @@
     }
 
     .recognized {
-      h4 {
-        color: darkblue;
-      }
       margin-top: 30px;
       &__textarea {
         margin-top: 5px;
@@ -123,9 +122,9 @@
     .words-container {
       height: 100%;
       &__top {
-
       }
       &__mid {
+        margin-top: 5px;
       }
       &__bot {
         position: absolute;
