Add word add btn action

--- a/app/views/lessons/new.html.haml
+++ b/app/views/lessons/new.html.haml
@@ -57,8 +57,7 @@
           %table.words-table
             %tbody#missed-words
         .words-container__bot
-          %input.word-input(type="text"){placeholder: "add word"}
-            %textfieldt#word-text
+          %input.word-input#word-input(type="text"){placeholder: "add word"}
           %i.fa.fa-microphone.fa-#rec-word-btn.icon.word-icon
           %i.fa.fa-pause.fa-#stop-word-btn.icon.word-icon
           %i.fa.fa-plus.fa-#add-word-btn.icon.word-icon
