--- a/app/views/lessons/new.html.haml
+++ b/app/views/lessons/new.html.haml
@@ -53,6 +53,8 @@
       .words-container
         .words-container__top
           %h4 単語練習
+          %button#remove-all-btn
+            remove all
         .words-container__mid
           %table.words-table
             %tbody#missed-words
