Set btn condition for save

--- a/app/views/lessons/new.html.haml
+++ b/app/views/lessons/new.html.haml
@@ -11,7 +11,9 @@
                 %option{:value=>s/10.to_f, :selected => s == 10}
                   = s/10.to_f
         %textarea.target__textarea#target-text
+          Success is how high you bounce when you hit bottom.
         .target__fixed-text#fixed-text
+          Success is how high you bounce when you hit bottom.
         .target__bottom
           .target__bottom__left
             %button#edit-btn.btn
@@ -27,6 +29,7 @@
       .recognized
         %h4 認識文
         .recognized__textarea#recognized-text
+          Success is how high you bounce when you hot bottom.
         .recognized__bottom
           .recognized__bottom__left
             %button#rec-btn.btn
@@ -44,8 +47,6 @@
           save
         %i.fa.fa-backward.fa-#back-btn.icon
         %i.fa.fa-forward.fa-#next-btn.icon
-        %button#new-btn.btn
-          new
     .lesson-container__right
       .words-container
         .words-container__top
