Enable to learn some sentences at once

--- a/app/views/lessons/new.html.haml
+++ b/app/views/lessons/new.html.haml
@@ -47,6 +47,8 @@
           save
         %i.fa.fa-backward.fa-#back-btn.icon
         %i.fa.fa-forward.fa-#next-btn.icon
+        %button#new-btn.btn
+          new
     .lesson-container__right
       .words-container
         .words-container__top
