Modify toggle of next/back

--- a/app/views/lessons/new.html.haml
+++ b/app/views/lessons/new.html.haml
@@ -45,8 +45,10 @@
       .controller
         %button#save-btn.btn
           save
-        %i.fa.fa-backward.fa-#back-btn.icon
-        %i.fa.fa-forward.fa-#next-btn.icon
+        %button#back-btn.btn
+          %i.fa.fa-backward.fa-
+        %button#next-btn.btn
+          %i.fa.fa-forward.fa-
         %button#new-btn.btn
           new
     .lesson-container__right
