--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -15,7 +15,7 @@
   .right-container
     .right-container__upper
       .contents
-        = link_to "今日やる復習", "#" , class: "content"
+        = link_to "今日やる復習", user_review_path(user_id: current_user.id) , class: "content"
         = link_to "新しく学習を始める", new_user_lesson_path(user_id: current_user.id) , class: "content content__even"
         %hr/
         = link_to "今日新しく学んだこと", today_user_lessons_path(user_id: current_user.id) , class: "content content"
