--- a/app/views/reviews/today.html.haml
+++ b/app/views/reviews/today.html.haml
@@ -8,7 +8,7 @@
   - @reviews.each_with_index do |review, i|
     %ul
       %li
-        = "復習回数：#{review.count}　学習日：#{review.lesson.created_at.strftime('%Y/%m/%d')}"
+        = "復習：#{review.count}回目　学習日：#{review.lesson.created_at.strftime('%Y/%m/%d')}"
       %li
         = "内容: #{review.lesson.content}"
     %hr/
