--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -19,7 +19,9 @@
         = link_to "新しく学習を始める", new_user_lesson_path(user_id: current_user.id) , class: "content content__even"
         %hr/
         = link_to "今日新しく学んだこと", today_user_lessons_path(user_id: current_user.id) , class: "content content"
-        = link_to "学習一覧", user_lessons_path(user_id: current_user.id) , class: "content content__even"
+        = link_to "今日復習したこと", user_reviewed_today_path(user_id: current_user.id) , class: "content content__even"
+        %hr/
+        = link_to "学習一覧", user_lessons_path(user_id: current_user.id) , class: "content"
     %hr/
     .right-container__lower
       .progress
