--- a/app/assets/stylesheets/users_show.scss
+++ b/app/assets/stylesheets/users_show.scss
@@ -105,9 +105,7 @@
           }
         }
         &__container {
-          text-align: center;
-          font-size: 20px;
-          line-height: 20px;
+          margin: 10px auto;
         }
       }
     }
