Modify style users_show

--- a/app/assets/stylesheets/users_show.scss
+++ b/app/assets/stylesheets/users_show.scss
@@ -105,7 +105,8 @@
           }
         }
         &__container {
-          margin: 10px auto;
+          margin-top: 10px;
+          margin-left: 20px;
         }
       }
     }
