--- a/app/views/lessons/new.html.haml
+++ b/app/views/lessons/new.html.haml
@@ -62,4 +62,9 @@
           %i.fa.fa-microphone.fa-#rec-word-btn.icon.word-icon
           %i.fa.fa-pause.fa-#stop-word-btn.icon.word-icon
           %i.fa.fa-plus.fa-#add-word-btn.icon.word-icon
+  .lesson-note
+    .note-field
+      %form
+        %input{id: "note-field", type: "hidden"}
+        %trix-editor{input: "note-field"}
 = javascript_include_tag "lessons_new.js"
