Add h1 style to trix

--- a/app/assets/stylesheets/lessons.scss
+++ b/app/assets/stylesheets/lessons.scss
@@ -208,9 +208,14 @@
   }
   .note-field {
     trix-editor {
+      h1 {
+        font-size: 30px;
+        font-weight: normal;
+      }
       padding: 30px;
       min-height: 300px;
       font-size: 20px;
+      line-height: 35px;
     }
   }
 }
