Add note to reviewing

--- a/app/views/reviews/reviewing.html.haml
+++ b/app/views/reviews/reviewing.html.haml
@@ -57,4 +57,7 @@
           %i.fa.fa-microphone.fa-#rec-word-btn.icon.word-icon
           %i.fa.fa-pause.fa-#stop-word-btn.icon.word-icon
           %i.fa.fa-plus.fa-#add-word-btn.icon.word-icon
+  .lesson-note
+    %h4 ノート
+    .note-html#note-text
 = javascript_include_tag "reviewing.js"
