--- a/app/assets/stylesheets/lessons.scss
+++ b/app/assets/stylesheets/lessons.scss
@@ -218,4 +218,13 @@
       line-height: 35px;
     }
   }
+  .note-html {
+    border: 1px solid grey;
+    min-height: 100px;
+    padding: 30px;
+    h1 {
+      font-size: 35px;
+      font-weight: normal;
+    }
+  }
 }
