Add lessons#show page

--- a/app/assets/stylesheets/lessons.scss
+++ b/app/assets/stylesheets/lessons.scss
@@ -69,6 +69,10 @@
           justify-content: right;
         }
       }
+      &__top {
+        display: flex;
+        justify-content: space-between;
+      }
       &__textarea {
         margin-top: 5px;
         padding: 10px 20px;
