Add link to lessons#show

--- a/app/views/lessons/today.html.haml
+++ b/app/views/lessons/today.html.haml
@@ -10,4 +10,6 @@
         = "内容：#{lesson.content}"
       %li
         = "精度：#{lesson.correctness}%"
-      = link_to "削除","/users/#{current_user.id}/lessons/#{lesson.id}", method: :delete, data: {confirm: "削除しますか？"}
+      %li
+        = link_to "詳細","/users/#{current_user.id}/lessons/#{lesson.id}"
+        = link_to "削除","/users/#{current_user.id}/lessons/#{lesson.id}", method: :delete, data: {confirm: "削除しますか？"}
