Change icon for listening

--- a/app/views/lessons/show.html.haml
+++ b/app/views/lessons/show.html.haml
@@ -31,7 +31,7 @@
             %button#refresh-btn.btn
               refresh
           .target__bottom__right
-            %i.fa.fa-play.fa-#speech-btn.icon
+            %i.fa.fa-headphones.fa-#speech-btn.icon
             %i.fa.fa-stop.fa-#cancel-btn.icon
               
       .recognized
