--- a/app/views/reviews/reviewing.html.haml
+++ b/app/views/reviews/reviewing.html.haml
@@ -21,7 +21,7 @@
             %button#next-btn.btn
               %i.fa.fa-forward.fa-
           .target__bottom__right
-            %i.fa.fa-play.fa-#speech-btn.icon
+            %i.fa.fa-headphones.fa-#speech-btn.icon
             %i.fa.fa-stop.fa-#cancel-btn.icon
               
       .recognized
