--- a/app/assets/stylesheets/users_show.scss
+++ b/app/assets/stylesheets/users_show.scss
@@ -75,7 +75,7 @@
           border-radius: 5px;
           display: block;
           margin: 20px auto;
-
+          position: relative;
           &__even {
             background-color: lightblue;
           }
@@ -89,6 +89,21 @@
           }
           &:hover {
             background-color: lightslategray;
+          }
+
+          &__badge {
+            height: 30px;
+            min-width: 30px;
+            padding: 0 5px;
+            position: absolute;
+            top: -10px;
+            right: -10px;
+            background-color: red;
+            color: white;
+            font-weight: bold;
+            border-radius: 15px;
+            font-size: 20px;
+            line-height: 30px;
           }
         }
       }
