--- a/app/assets/stylesheets/users_show.scss
+++ b/app/assets/stylesheets/users_show.scss
@@ -98,12 +98,17 @@
             position: absolute;
             top: -10px;
             right: -10px;
-            background-color: red;
             color: white;
             font-weight: bold;
             border-radius: 15px;
             font-size: 20px;
             line-height: 30px;
+            &--red {
+              background-color: red;
+            }
+            &--blue {
+              background-color: darkblue;
+            }
           }
         }
       }
