--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -22,7 +22,11 @@
               = @today_reviewing.length
         = link_to "新しく学習を始める", new_user_lesson_path(user_id: current_user.id) , class: "content content__even"
         %hr/
-        = link_to "今日新しく学んだこと", today_user_lessons_path(user_id: current_user.id) , class: "content content"
+        = link_to today_user_lessons_path(user_id: current_user.id) , class: "content content" do
+          今日新しく学んだこと
+          - unless @today_lessons.empty?
+            .content__badge.content__badge--blue
+              = @today_lessons.length
         = link_to user_reviewed_today_path(user_id: current_user.id) , class: "content content__even" do
           今日復習したこと
           - unless @today_reviewed.empty?
