Add Ffinish-btn to reviewing

--- a/app/views/reviews/reviewing.html.haml
+++ b/app/views/reviews/reviewing.html.haml
@@ -43,6 +43,9 @@
           .recognized__bottom__right
             %button#done-btn.btn
               完了
+            = link_to user_reviewed_today_path do
+              %button#finish-btn.btn
+                終了
     .lesson-container__right
       .words-container
         .words-container__top
