--- a/app/assets/stylesheets/lessons.scss
+++ b/app/assets/stylesheets/lessons.scss
@@ -108,6 +108,12 @@
         &__right {
         display: flex;
         justify-content: right;
+        .btn {
+            margin-left: 10px;
+            a {
+              text-decoration: none;
+            }
+        }
         .recognition {
           padding-right: 10px;
         }
