Import UIKit files

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,6 +1,7 @@
 @import 'font-awesome-sprockets';
 @import 'font-awesome';
 @import 'trix';
+ @import "uikit.min";
 
 @import 'common';
 @import 'reset';
